--- a/app/src/main/res/layout/fragment_note_detail.xml
+++ b/app/src/main/res/layout/fragment_note_detail.xml
@@ -26,7 +26,7 @@
         android:layout_below="@+id/date"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="47dp"
-        android:text="New Button" />
+        android:text="@string/button_set_now" />
 
     <DatePicker
         android:id="@+id/datePicker"
