--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,22 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_sort"
+        android:orderInCategory="100"
+        android:title="@string/sort"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/settings"
         app:showAsAction="never" />
-    <item
-        android:id="@+id/action_main"
-        android:icon="@android:drawable/ic_menu_compass"
-        android:orderInCategory="10"
-        android:title="@string/main"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/action_favorite"
-        android:icon="@android:drawable/btn_star_big_on"
-        android:orderInCategory="20"
-        android:title="@string/favorite"
-        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_search"
         android:icon="@android:drawable/ic_menu_search"
