--- a/app/src/main/res/menu/main_drawer.xml
+++ b/app/src/main/res/menu/main_drawer.xml
@@ -7,7 +7,7 @@
         android:title="@string/settings" />
     <item
         android:id="@+id/action_about_app"
-        android:icon="@android:drawable/ic_menu_zoom"
+        android:icon="@android:drawable/ic_dialog_info"
         android:orderInCategory="100"
         android:title="@string/about_app" />
 </menu>
