--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,4 +23,13 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="Theme.Notes.NoActionBar.NavHeader">
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingTop">30dp</item>
+        <item name="android:paddingEnd">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:gravity">bottom</item>
+        <item name="android:background">@drawable/side_nav_bar</item>
+    </style>
+
 </resources>
