--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,6 +6,21 @@
         <item>Заголовок 3</item>
         <item>Заголовок 4</item>
         <item>Заголовок 5</item>
+        <item>Заголовок 6</item>
+        <item>Заголовок 7</item>
+        <item>Заголовок 8</item>
+        <item>Заголовок 9</item>
+        <item>Заголовок 10</item>
+        <item>Заголовок 1</item>
+        <item>Заголовок 2</item>
+        <item>Заголовок 3</item>
+        <item>Заголовок 4</item>
+        <item>Заголовок 5</item>
+        <item>Заголовок 6</item>
+        <item>Заголовок 7</item>
+        <item>Заголовок 8</item>
+        <item>Заголовок 9</item>
+        <item>Заголовок 10</item>
     </string-array>
 
     <string-array name="description_array">
@@ -14,6 +29,21 @@
         <item>Описание 3</item>
         <item>Описание 4</item>
         <item>Описание 5</item>
+        <item>Описание 6</item>
+        <item>Описание 7</item>
+        <item>Описание 8</item>
+        <item>Описание 9</item>
+        <item>Описание 10</item>
+        <item>Описание 1</item>
+        <item>Описание 2</item>
+        <item>Описание 3</item>
+        <item>Описание 4</item>
+        <item>Описание 5</item>
+        <item>Описание 6</item>
+        <item>Описание 7</item>
+        <item>Описание 8</item>
+        <item>Описание 9</item>
+        <item>Описание 10</item>
     </string-array>
 
     <string-array name="date_array">
