--- a/app/src/main/res/layout-land/fragment_note_detail.xml
+++ b/app/src/main/res/layout-land/fragment_note_detail.xml
@@ -42,4 +42,11 @@
         android:layout_marginTop="47dp"
         android:text="@string/button_set_now" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button_save_note"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="47dp"
+        android:text="@string/button_save_note" />
+
 </LinearLayout>
